# ptbconv-3.0

./: AUTHORS  Makefile  Makefile.in  common.rb  config.status  configure  configure.in  enable_gaps.rb  meip.rb  ptbconv  ptbconv.in  readme.html  readme.rd  readme.rd.in  sample  trace.rb
autom4te.cache/: output.0  traces.0
lib/ruby/natural_language/: common.rb  context.rb  parse_tree.rb  parser.rb  pos.rb  sentence.rb
lib/ruby/natural_language/corpus/: common.rb
lib/ruby/natural_language/corpus/penn_treebank/: common.rb  function.rb  phrasal_category.rb  pos.rb  sparser.rb
